# zig-h3

./: .gitignore  API_STABILITY.md  BAKEOFF.md  BENCH.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  build.zig  build.zig.zon  release-signing.gpg.pub
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
bench/: bench_grid_disk.zig  bench_latlng_to_cell.zig  bench_pure_vs_libh3.zig
bench/results/: 2026-05-15.out
bindings/python/: README.md  pyproject.toml
bindings/python/zig_h3/: __init__.py
examples/: nyc_neighbors.zig  quickstart.zig
src/: property_invariants.zig  property_polygon_test.zig  pure.zig  pure_boundary.zig  pure_edge.zig  pure_grid.zig  pure_h3decode.zig  pure_h3index.zig  pure_hierarchy.zig  pure_localij.zig  pure_polygon.zig  pure_proj.zig  pure_vertex.zig  root.zig
tools/: coverage-check.sh  doctest.sh  mutation-test.sh
